--- a/views/seller/profile/edit.erb
+++ b/views/seller/profile/edit.erb
@@ -3,17 +3,20 @@
         <div class="col">
             <div class="card border-secondary">
                 <div class="card-header">User Profile Edit</div>
-                <form action="<%%>">
                     <div class="card-body">
+                        <form action="/seller_profile_edit/<%= @profile['user_id'] %>" method="post" enctype="multipart/form-data" >
                         <div class="row g-0">
+                            <div class="col-md-12">
+                                <input type="hidden" name="_method" value="post">
+                            </div>
                             <div class="col-md-4">
                                 <% if @profile['photo'] %>
                                         <img src="/uploads/users/<%= @profile['photo'] %>" class="img-fluid rounded-start" alt="<%= @profile['username']%>">
                                     <% end %>
                                     
                                     <div class="my-5">
-                                        <label for="formFileSm" class="form-label">Input A New File</label>
-                                        <input class="form-control form-control-sm w-50" id="formFileSm" type="file">
+                                        <label for="file" class="form-label">Input A New File</label>
+                                        <input class="form-control form-control-sm w-50" id="file" type="file" name="file">
                                     </div>
                             </div>
                             <div class="col-md-8">
@@ -22,7 +25,7 @@
                                         <div class="mb-3 row">
                                             <label for="name" class="col-sm-2 col-form-label">Name</label>
                                             <div class="col-sm-10">
-                                                <input type="text" class="form-control" id="name" value="<%= @profile['name'] %>">
+                                                <input type="text" class="form-control" id="name" name="name" value="<%= @profile['name'] %>">
                                             </div>
                                         </div>
                                     </li>
@@ -30,7 +33,7 @@
                                         <div class="mb-3 row">
                                             <label for="username" class="col-sm-2 col-form-label">Username</label>
                                             <div class="col-sm-10">
-                                                <input type="text" class="form-control" id="username" value="<%= @profile['username']%>">
+                                                <input type="text" class="form-control" id="username" name="username" value="<%= @profile['username']%>">
                                             </div>
                                         </div>
                                     </li>
@@ -38,7 +41,7 @@
                                         <div class="mb-3 row">
                                             <label for="email" class="col-sm-2 col-form-label">Email</label>
                                             <div class="col-sm-10">
-                                                <input type="text" readonly class="form-control" id="email" value="<%= @profile['email'] %>">
+                                                <input type="text" readonly class="form-control" id="email" name="email" value="<%= @profile['email'] %>">
                                             </div>
                                         </div>
                                     </li>
@@ -46,7 +49,7 @@
                                         <div class="mb-3 row">
                                             <label for="phone" class="col-sm-2 col-form-label">Phone</label>
                                             <div class="col-sm-10">
-                                                <input type="text" class="form-control" id="phone" value="<%= @profile['phone'] %>">
+                                                <input type="text" class="form-control" id="phone" name="phone" value="<%= @profile['phone'] %>">
                                             </div>
                                         </div>
                                     </li>
@@ -54,7 +57,7 @@
                                         <div class="mb-3 row">
                                             <label for="birthdate" class="col-sm-2 col-form-label">Birthdate</label>
                                             <div class="col-sm-10">
-                                                <input type="date" class="form-control" id="birthdate" value="<%= @profile['birthdate']%>">
+                                                <input type="date" class="form-control" id="birthdate" name="birthdate" value="<%= @profile['birthdate']%>">
                                             </div>
                                         </div>
                                     </li>
@@ -62,7 +65,7 @@
                                         <div class="mb-3 row">
                                             <label for="address" class="col-sm-2 col-form-label">Address</label>
                                             <div class="col-sm-10">
-                                                <textarea type="text" class="form-control" id="address" value="<%= @profile['address'] %>"><%= @profile['address'] %></textarea>
+                                                <textarea type="text" class="form-control" id="address" name="address" value="<%= @profile['address'] %>"><%= @profile['address'] %></textarea>
                                             </div>
                                         </div>
                                     </li>
@@ -71,10 +74,10 @@
                         </div>
                     </div>
                     <div class="card-footer">
+                        <button type="submit" class="btn btn-success float-end">Submit</button>
+                        </form> 
                         <a href="/seller_profile_view/<%= current_user['user_id'] %>" class="btn btn-danger float-start">Back</a>
-                        <button class="btn btn-success float-end">Submit</button>
                     </div>
-                </form>
             </div>     
         </div>
     </div>
