--- a/views/user/profile/edit.erb
+++ b/views/user/profile/edit.erb
@@ -4,74 +4,91 @@
             <div class="card border-secondary">
                 <div class="card-header">User Profile Edit</div>
                 <div class="card-body">
-                   <div class="row g-0">
-                    <div class="col-md-4">
-                        <% if @profile['photo'] %>
+                    <div class="row">
+                        <div class="col">
+                            <% if @errors&.any? %>
+                                <% @errors.each do |error| %>
+                                    <div class="alert alert-warning alert-dismissible fade show" role="alert">
+                                        <div><%= error %></div>
+                                        <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+                                    </div>
+                                <% end %>
+                            <% end %>
+                        </div>
+                    </div>
+                    <form action="/user_profile_edit/<%= @profile['user_id'] %>" method="post" enctype="multipart/form-data">
+                    <div class="row g-0">
+                        <div class="col col-md-12">
+                            <input type="hidden" name="_method" value="post">
+                        </div>
+                        <div class="col-md-4">
+                            <% if @profile['photo'] %>
                                 <img src="/uploads/users/<%= @profile['photo'] %>" class="img-fluid rounded-start" alt="<%= @profile['username']%>">
                             <% end %>
                             
                             <div class="my-5">
-                                <label for="formFileSm" class="form-label">Input A New File</label>
-                                <input class="form-control form-control-sm w-50" id="formFileSm" type="file">
+                                <label for="file" class="form-label">Input A New Photo</label>
+                                <input class="form-control form-control-sm w-50" id="photo" name="photo" type="file">
                             </div>
+                        </div>
+                        <div class="col-md-8">
+                            <ul class="list-group list-group-flush">
+                                <li class="list-group-item">
+                                    <div class="mb-3 row">
+                                        <label for="name" class="col-sm-2 col-form-label">Name</label>
+                                        <div class="col-sm-10">
+                                            <input type="text" class="form-control" id="name" name="name" value="<%= @profile['name'] %>">
+                                        </div>
+                                    </div>
+                                </li>
+                                <li class="list-group-item">
+                                    <div class="mb-3 row">
+                                        <label for="username" class="col-sm-2 col-form-label">Username</label>
+                                        <div class="col-sm-10">
+                                            <input type="text" class="form-control" id="username" name="username" value="<%= @profile['username']%>">
+                                        </div>
+                                    </div>
+                                </li>
+                                <li class="list-group-item">
+                                    <div class="mb-3 row">
+                                        <label for="email" class="col-sm-2 col-form-label">Email</label>
+                                        <div class="col-sm-10">
+                                            <input type="text" class="form-control" name="email" id="email" value="<%= @profile['email'] %>">
+                                        </div>
+                                    </div>
+                                </li>
+                                <li class="list-group-item">
+                                    <div class="mb-3 row">
+                                        <label for="phone" class="col-sm-2 col-form-label">Phone</label>
+                                        <div class="col-sm-10">
+                                            <input type="text" class="form-control" id="phone" name="phone" value="<%= @profile['phone'] %>">
+                                        </div>
+                                    </div>
+                                </li>
+                                <li class="list-group-item">
+                                    <div class="mb-3 row">
+                                        <label for="birthdate" class="col-sm-2 col-form-label">Birthdate</label>
+                                        <div class="col-sm-10">
+                                            <input type="date" class="form-control" id="birthdate" name="birthdate" value="<%= @profile['birthdate']%>">
+                                        </div>
+                                    </div>
+                                </li>
+                                <li class="list-group-item">
+                                    <div class="mb-3 row">
+                                        <label for="address" class="col-sm-2 col-form-label">Address</label>
+                                        <div class="col-sm-10">
+                                            <textarea type="text" class="form-control" id="address" name="address" value="<%= @profile['address'] %>"><%= @profile['address'] %></textarea>
+                                        </div>
+                                    </div>
+                                </li>
+                            </ul>
+                        </div>
                     </div>
-                    <div class="col-md-8">
-                        <ul class="list-group list-group-flush">
-                            <li class="list-group-item">
-                                <div class="mb-3 row">
-                                    <label for="name" class="col-sm-2 col-form-label">Name</label>
-                                    <div class="col-sm-10">
-                                        <input type="text" class="form-control" id="name" value="<%= @profile['name'] %>">
-                                    </div>
-                                </div>
-                            </li>
-                            <li class="list-group-item">
-                                <div class="mb-3 row">
-                                    <label for="username" class="col-sm-2 col-form-label">Username</label>
-                                    <div class="col-sm-10">
-                                        <input type="text" class="form-control" id="username" value="<%= @profile['username']%>">
-                                    </div>
-                                </div>
-                            </li>
-                            <li class="list-group-item">
-                                <div class="mb-3 row">
-                                    <label for="email" class="col-sm-2 col-form-label">Email</label>
-                                    <div class="col-sm-10">
-                                        <input type="text" readonly class="form-control" id="email" value="<%= @profile['email'] %>">
-                                    </div>
-                                </div>
-                            </li>
-                            <li class="list-group-item">
-                                <div class="mb-3 row">
-                                    <label for="phone" class="col-sm-2 col-form-label">Phone</label>
-                                    <div class="col-sm-10">
-                                        <input type="text" class="form-control" id="phone" value="<%= @profile['phone'] %>">
-                                    </div>
-                                </div>
-                            </li>
-                            <li class="list-group-item">
-                                <div class="mb-3 row">
-                                    <label for="birthdate" class="col-sm-2 col-form-label">Birthdate</label>
-                                    <div class="col-sm-10">
-                                        <input type="date" class="form-control" id="birthdate" value="<%= @profile['birthdate']%>">
-                                    </div>
-                                </div>
-                            </li>
-                            <li class="list-group-item">
-                                <div class="mb-3 row">
-                                    <label for="address" class="col-sm-2 col-form-label">Address</label>
-                                    <div class="col-sm-10">
-                                        <textarea type="text" class="form-control" id="address" value="<%= @profile['address'] %>"><%= @profile['address'] %></textarea>
-                                    </div>
-                                </div>
-                            </li>
-                        </ul>
-                    </div>
-                   </div>
                 </div>
                 <div class="card-footer">
+                    <button type="submit" class="btn btn-success float-end">Submit</button>
+                    </form>
                     <a href="/user_profile/<%= current_user['user_id'] %>" class="btn btn-danger float-start">Back</a>
-                    <button class="btn btn-success float-end">Submit</button>
                 </div>
             </div>     
         </div>
