--- a/views/admin/user_dashboard/user_lists.erb
+++ b/views/admin/user_dashboard/user_lists.erb
@@ -83,9 +83,9 @@
                         <th><%= user['access']%></th>
                         <th>
                             <div class="btn-group btn-group-sm" role="group" aria-label="Button Group">
-                                <button type="submit" class="btn btn-danger" data-bs-toggle="modal" data-bs-target="#deleteModal<%= user['user_id']%>">Delete</button>
-                                <a href="/detail_user/<%= user['user_id']%>" class="btn btn-info text-white">View</a>
-                                <a href="/edit_user/<%= user['user_id']%>" class="btn btn-primary">Edit</a>
+                                <button type="submit" class="btn btn-danger" data-bs-toggle="modal" data-bs-target="#deleteModal<%= user['user_id']%>"><i class="fa-solid fa-trash"></i></button>
+                                <a href="/detail_user/<%= user['user_id']%>" class="btn btn-info text-white"><i class="fa-solid fa-eye"></i></a>
+                                <a href="/edit_user/<%= user['user_id']%>" class="btn btn-primary"><i class="fa-solid fa-edit"></i></a>
                             </div>
                         </th>
                     </tr>
